    in config_local.example.php in SquirrelMail version 1.5.2 for more
    information.
  - Added ability to show login error from the IMAP server instead of
    traditional "Unknown user or password incorrect" (thanks to Alain
    Williams).  See $display_imap_login_error in the configuration
    file or "4.  General Options ==> 22. Display login error from IMAP"
    in the configuration tool.

Version 1.4.22 - 12 July 2011
-----------------------------
  - Backported default timezone fix from version 1.5.2; helps mitigate
    timezone errors in environments where a default has not been set
    by the administrator.
  - Fixed system lock-ups caused by a combination of certain rare,
    malformed message headers and buggy versions of PHP mbstring
    (#3053349).
  - Now allow multiple plugins to handle (add links for) a single
    attachment MIME type.
  - Now allow administrators to disable all plugins or enable just
    a select few plugins (overriding the active plugins in the normal
    configuration) by setting $temporary_plugins as an empty array
    (all disabled) or an array with one or more plugin directory names
    in config_local.php.
  - Backport fix for call_user_func_array not supporting NULL as empty
    array in PHP 5.3.3
  - Fixed sqauth_read_password() for plugins on the login_verified hook.
  - Added SMTP SASL PLAIN authentication option to configuration tool
    (core support for such is not new).
  - Gmail doesn't support standard search commands; removed sort buttons.
  - Forced addition of a file suffix to attachments that lack a filename
    (helps forwarded messages avoid spam filters) (thanks to Petr
    Kletecka) (#3139004).
  - Fixed missing security token in listcommands plugin.
  - Added smtp_auth hook (thanks to Emmanuel Dreyfus).
  - Made speed enhancements to threaded message display (thanks to Siim
    Poder) (#3288123).
  - Allow administrators to configure subfolders of user INBOXes to be